--- a/web-app/asqatasun-web-app/src/main/resources/i18n/displaytag_de.properties
+++ b/web-app/asqatasun-web-app/src/main/resources/i18n/displaytag_de.properties
@@ -1,36 +1,18 @@
 #X-Generator: crowdin.com
-export.pdf.label=Export as PDF
-export.csv.label=Export as CSV
-basic.msg.empty_list=<div id="pagination-empty-list">No results found</div>
-paging.banner.page.link=<a href="{1}" title="Go to page {0}">{0}</a>
-export.banner=<div class="export-links cml">{0}</div>
+basic.show.header=richtig
+paging.banner.group_size=10
+locale.resolver=org.tanaguru.report.pagination.localization.TgolI18nSpringAdapter
+export.pdf=falsch
+export.excel=falsch
+export.xml=falsch
+export.csv=falsch
+export.pdf.label=Als PDF exportieren
+export.csv.label=Exportieren als CSV
+export.banner=<div class\="export-links cml">{0}</div>
 paging.banner.some_items_found=
 paging.banner.all_items_found=
 paging.banner.one_item_found=
 paging.banner.onepage=
-paging.banner.items_name=items
-paging.banner.item_name=item
-paging.banner.full=\
-<div class="page-links">\
-<span class="pagination-prev"><a href="{1}" title="Go to the first page">First</a> \
-<a href="{2}" title="Go to the previous page"> Prev</a></span>\
-  {0}  \
-<span class="pagination-next"><a href="{3}" title="Go to the next page">Next</a> \
-<a href="{4}" title="Go to the last page"> Last</a></span>\
-</div>
-paging.banner.first=\
-<div class="page-links">\
-<span class="pagination-prev">First \
- Prev</span>\
-  {0}  \
-<span class="pagination-next"><a href="{3}" title="Go to the next page">Next</a> \
-<a href="{4}" title="Go to the last page"> Last</a></span>\
-</div>
-paging.banner.last=\
-<div class="page-links">\
-<span class="pagination-prev"><a href="{1}" title="Go to the first page">First</a> \
-<a href="{2}" title="Go to the previous page"> Prev</a></span>\
-  {0}  \
-<span class="pagination-next">Next \
- Last</span>\
-</div>
+paging.banner.full=\n<div class\="pagination"> <span class\="pagination-prev"> <a href\="{1}" title\="Go to the first page"> erste</a> <a href\="{2}" title\="Go to the previous page"> vorherige</a></span> <span class\="pagination-next"> <a href\="{3}" title\="Go to the next page"> n\u00e4chste</a> <a href\="{4}" title\="Go to the last page"> letzte</a></span>{0}</div>
+paging.banner.first=\n <div class\="page-links"> <span class\="pagination-prev"> erste vorherige</span> <span class\="pagination-next"> <a href\="{3}" title\="Go to the next page"> n\u00e4chste</a> <a href\="{4}" title\="Go to the last page"> letzte</a></span>{0}</div>
+paging.banner.last=\n<div class\="page-links"> <span class\="pagination-prev"> <a href\="{1}" title\="Go to the first page"> erste</a> <a href\="{2}" title\="Go to the previous page"> vorherige</a></span>{0} <span class\="pagination-next"> n\u00e4chste letzte</span></div>
